--- a/Example/Example/Base.lproj/Main.storyboard
+++ b/Example/Example/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -95,6 +94,35 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5lK-OM-8Is" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-140" y="529.38530734632684"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="z3M-xh-R8P">
+            <objects>
+                <viewController id="rut-Pu-58S" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KGU-3g-FM2"/>
+                        <viewControllerLayoutGuide type="bottom" id="fU4-Tk-gpi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3Dj-wz-M7w">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lbW-bc-4Tq" customClass="FireworksView" customModule="FireworksKit">
+                                <rect key="frame" x="0.0" y="399" width="375" height="268"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="particleEffectName" value="Snow"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="particleName" value="Fire"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ud-JF-akN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="40.799999999999997" y="1261.6191904047978"/>
         </scene>
     </scenes>
 </document>
